--- a/src/app/Module/dasboard-resto/dasboard-resto.component.html
+++ b/src/app/Module/dasboard-resto/dasboard-resto.component.html
@@ -6,7 +6,7 @@
     <ul class="nav-links">
       
       <li>
-        <a href="#" routerLink="/menuResto">
+        <a href="#" routerLink="/menuResto" routerLinkActive="active">
           <i class="bx bx-book-alt"></i>
           <span class="links_name">Gestion menu</span>
         </a>
@@ -25,7 +25,7 @@
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/commentairesResto">
+        <a href="#" routerLink="/commentairesResto" routerLinkActive="active">
           <i class="bx bx-message"></i>
           <span class="links_name">Commentaires</span>
         </a>
