--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -16,7 +16,7 @@
             <a routerLink="/restaurant" routerLinkActive="active">Restaurant</a>
           </li>
           <li class="menu-item text-black">
-            <a routerLink="/propos" routerLinkActive="active">A propos</a>
+            <a routerLink="/Apropos" routerLinkActive="active">A propos</a>
           </li>
           <li class="menu-item text-black">
             <a routerLink="/contact" routerLinkActive="active">Contact</a>
