--- a/src/app/Module/dasboard-resto/dasboard-resto.component.css
+++ b/src/app/Module/dasboard-resto/dasboard-resto.component.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.active{
+  color: #FFA07A !important;
+}
 .sidebar{
   position: fixed;
   height: 100%;
