--- a/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
+++ b/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
@@ -18,7 +18,7 @@
               <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
             </select>
           </div>
-          
+
           <div class="search">
             <div class="input-group mb-3">
               <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
@@ -65,65 +65,31 @@
                 class="bi bi-x-lg"></i></button>
           </div>
           <div class="modal-body">
-            <!-- <form class="ajoutArticle" (ngSubmit)="addPlat()" enctype="multipart/form-data">
+            <form [formGroup]="ajoutArticle" (ngSubmit)="addPlat()">
               <div class="mb-3">
-                <label for="titreArticle">Titre du plat:</label>
-                <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle">
+                <label for="label">Titre du plat:</label><br>
+                <input type="text" id="label" formControlName="libelle" />
               </div>
               <div class="mb-3">
-                <label for="titreArticle">Prix:</label>
-                <input class="form-control" type="number" id="titreArticle" name="prix" [(ngModel)]="prix">
+                <label for="description">Description:</label><br>
+                <textarea id="description" formControlName="descriptif"></textarea>
               </div>
-
               <div class="mb-4">
-                <label for="inputImage" class="form-label">Image</label>
-                <input type="file" class="form-control" id="inputGroupFile02" name="image" (change)="getFile($event)"
-                  accept="image/*">
+                <label for="image">Image:</label><br>
+                <input type="file" id="image" (change)="getFile($event)" formControlName="image" />
               </div>
-
               <div class="mb-3">
-                <label for="descriptionArticle">Description de l'article:</label>
-                <textarea class="form-control description-article" type="text" id="descriptif" name="descriptif"
-                  [(ngModel)]="descriptif"></textarea>
+                <label for="price">Prix:</label><br>
+                <input type="number" id="price" formControlName="prix" />
               </div>
-
               <div class="mb-3">
-                <label for="menu">Type de menu:</label>
-                <select id="menu" name="menu_id" [(ngModel)]="menu_id">
+                <label for="menu">Type de menu:</label><br>
+                <select id="menu" formControlName="menu_id">
                   <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
                 </select>
               </div>
-              <button class="btn btn-add" type="submit">Ajouter</button>
-            </form> -->
-
-            <!-- meal-form.component.html -->
-            <form [formGroup]="ajoutArticle" (ngSubmit)="addPlat()">
-  <label for="label">Libellé:</label>
-  <input type="text" id="label" formControlName="libelle" />
-
-  <label for="description">Description:</label>
-  <textarea id="description" formControlName="descriptif"></textarea>
-
-  <label for="image">Image:</label>
-  <input type="file" id="image" (change)="getFile($event)" formControlName="image" />
-
-
-  <label for="price">Prix:</label>
-  <input type="number" id="price" formControlName="prix" />
-
-  <div class="mb-3">
-    <label for="menu">Type de menu:</label>
-    <select id="menu" formControlName="menu_id">
-      <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
-    </select>
-  </div>
-
-  <button type="submit" [disabled]="ajoutArticle.invalid">Ajouter Plat</button>
+              <button type="submit" [disabled]="ajoutArticle.invalid">Ajouter Plat</button>
             </form>
-
-
-
-
           </div>
         </div>
       </div>
@@ -184,13 +150,13 @@
             <h2>{{libelle}}</h2>
             <h2>{{prix}}</h2>
             <h2>{{descriptif}}</h2>
-          <div>
-            <div *ngIf="Commandes">
-              <div *ngFor="let commande of Commandes">
-                  {{ commande.nomPlat }} 
+            <div>
+              <div *ngIf="Commandes">
+                <div *ngFor="let commande of Commandes">
+                  {{ commande.nomPlat }}
+                </div>
               </div>
             </div>
-          </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
