--- a/src/app/Utilisateur/profil/profil.component.css
+++ b/src/app/Utilisateur/profil/profil.component.css
@@ -25,20 +25,6 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft box shadow */
 }
 
-/* .profile-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: #ddd;
-    overflow: hidden;
-}
-
-.profile-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-} */
-
 .my-profile-detail {
     flex: 2;
     display: flex;
@@ -145,7 +131,7 @@ body {
 }
 
 .profile-page-title a:hover {
-    color: #FFA07A; /* Green on hover */
+    color: #FFA07A; 
 }
 
 .profile-content-main {
