--- a/src/app/Utilisateur/profil/profil.component.html
+++ b/src/app/Utilisateur/profil/profil.component.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row" id="profile_page_content">
+        <div class="row" id="profile_page_content">
             <div class="col-xl-3 col-lg-4">
                 <div class="sidebar-menu-main">
                     <div class="sidebar-menu">
@@ -53,51 +53,61 @@
                     <div class="tab-pane fade in active show">
                         <div class="profile-content-area">
                             <div class="profile-page-title">
-                                <h5>Historique des commandes</h5>
-                                <ul class="nav nav-tabs" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link active">Commandes en
-                                            cours</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" >Commandes passées</a>
-                                    </li>
-                                </ul>
+                              <h5>Historique des commandes</h5>
+                          
+                              <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                  <a class="nav-link active" (click)="showTemplate1()">Commandes en cours</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" (click)="showTemplate2()">Commandes passées</a>
+                                </li>
+                              </ul>
                             </div>
-                            
-
-                        </div>
+                          
+                            <ng-container *ngIf="currentTemplate === 'template1'; then template1 else template2"></ng-container>
+                          
+                            <ng-template #template1>
+                              <div class="profile-content-main">
+                                <div class="tab-content">
+                                  <div>
+                                    <div *ngIf="Commandes.length > 0; else noCommands">
+                                      <div *ngFor="let commande of Commandes">
+                                        {{ commande.id }} - {{ commande.nomPlat }}
+                                        - {{commande.created_at | date:'dd/MM/yyyy'}} -
+                                        {{commande.etatCommande}} - {{commande.prixCommande}}
+                                      </div>
+                                    </div>
+                                    <ng-template #noCommands>
+                                      <div>
+                                        <figure>
+                                          <img src="/assets/imageplatvide.png" alt="je suis l'image " />
+                                        </figure>
+                                        <p class="no-found">Aucune commande passée trouvée.</p>
+                                      </div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                              </div>
+                            </ng-template>
+                          
+                            <ng-template #template2>
+                                <div *ngIf="Commandes.length > 0; else noCommands">
+                                    <p>Contenu du template 2</p>
+                                </div>
+                                <ng-template #noCommands>
+                                    <div class="mx-auto">
+                                      <figure>
+                                        <img src="/assets/imageplatvide.png" alt="je suis l'image " />
+                                      </figure>
+                                      <p class="no-found">Aucune commande passée trouvée.</p>
+                                    </div>
+                                  </ng-template>
+                            </ng-template>
+                          </div>
+                          
                     </div>
                 </div>
-            </div>
-        </div> -->
-    </div>
-    <!-- <div class="col-lg-12 border-black">
-        <div class=""></div>
-    </div> -->
-
-
-
-    <div class="profile-content-main">
-        <div class="tab-content">
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque maxime illum reprehenderit explicabo, amet corporis dolor sed, in soluta officia, at vero possimus fugit? Laudantium dolorum dicta aliquam fugit veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam debitis itaque harum mollitia in aspernatur quas reiciendis placeat, cupiditate pariatur voluptatem? Veniam voluptatum eaque accusantium quae animi cum perspiciatis repellendus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde facilis consequuntur accusamus corrupti quaerat ex temporibus praesentium modi? Libero accusantium sit voluptatum eos labore cumque consectetur repellendus harum deserunt magni.
-            <div>
-                <div *ngIf="Commandes.length > 0; else noCommands">
-                    <div *ngFor="let commande of Commandes">
-                        {{ commande.id }} - {{ commande.nomPlat }} 
-                        - {{commande.created_at | date:'dd/MM/yyyy'}} - {{commande.etatCommande}} - {{commande.prixCommande}}
-                    </div>
-                </div>
-                <ng-template #noCommands>
-                    <div>
-                        <figure>
-                            <img
-                                src=""  alt="je suis l'image "/>
-                        </figure>
-                        <p class="no-found">Aucune commande passée trouvée.</p>
-                    </div>
-                </ng-template>
             </div>
         </div>
     </div>
