--- a/src/app/Utilisateur/restaurant/restaurant.component.html
+++ b/src/app/Utilisateur/restaurant/restaurant.component.html
@@ -2,7 +2,7 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner carouselBaniere">
     <div class="carousel-item h-100 active">
-      <img src="../../../assets/banierdetails.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" >
+      <img src="../../../assets/banierdetails.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
     </div>
     <div class="carousel-item h-100 ">
       <img src="../../../assets/baniertout.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
@@ -19,7 +19,8 @@
     <div>
       <div class="d-flex justify-content-around gap-3 me-5">
         <div>
-          <select class="form-select selectc-input" aria-label="Default select example" id="categorie_type" name="categorie_type" [(ngModel)]="categorie_id" (change)="onRestoChange()" required>
+          <select class="form-select selectc-input" aria-label="Default select example" id="categorie_type"
+            name="categorie_type" [(ngModel)]="categorie_id" (change)="onRestoChange()" required>
             <option value="" disabled selected>Choisissez un type de categorie</option>
             <option *ngFor="let categorie of categories" [value]="categorie.id">{{ categorie.type }}</option>
           </select>
@@ -37,7 +38,8 @@
     <div *ngFor="let restaurant of restaurants" class="col">
       <div class="card rounded rounded-4 cardResto" width="100px">
         <div class="rounded rounded-4 w-100 h-75 cardRestoEntete d-flex justify-content-center">
-          <img src="http://127.0.0.1:8000/images/{{restaurant.image}}" class="card-img-top border border-2 w-75 h-75 my-5 imageRestaurant" alt="image restaurant">
+          <img src="http://127.0.0.1:8000/images/{{restaurant.image}}"
+            class="card-img-top border border-2 w-75 h-75 my-5 imageRestaurant" alt="image restaurant">
         </div>
         <div class="card-body cardBodyResto">
           <div class="card-title d-flex justify-content-between">
@@ -47,7 +49,8 @@
           <!-- <p class="card-text">{{ restaurant.adresse }}</p> -->
         </div>
         <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-          <button class="boutonCommandeDts rounded rounded-5 px-3" (click)="toggleForm(); loadPlats(restaurant.id) ; loadMenus(restaurant.id)">Consulter</button>
+          <button class="boutonCommandeDts rounded rounded-5 px-3"
+            (click)="toggleForm(); loadPlats(restaurant.id) ; loadMenus(restaurant.id)">Consulter</button>
         </div>
       </div>
     </div>
@@ -57,74 +60,90 @@
 
 <section class="my-5 border mt-5" *ngIf="!DetailPlatidentifier">
   <p><i class="bi bi-arrow-left-circle-fill display-4" (click)="toggleForm()"></i></p>
-<div class="w-100 mx-auto my-4">
-  
+  <div class="w-100 mx-auto my-4">
+
+    <!-- ici c'est les plats  -->
     <div class="d-flex justify-content-between my-4 gap-4">
-     <div>
+      <div>
         <h4 class="titreDash fw-bold">Titre Restaurant </h4>
-     </div>
-        <div>
-            <div class="d-flex justify-content-around gap-3 me-5">
-                <div>
-                  <select class="form-select selectc-input" aria-label="Default select example" (change)="onMenuChange()" [(ngModel)]="selectedMenuId">
-                    <option value="" disabled selected>Choisissez un type de menu</option>
-                    <option *ngFor="let menu of menus" [value]="menu.id">{{ menu.titre }}</option>
-                  </select>
-                </div>
-                <div class="search">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control inputsearchResto" placeholder="rechercher un restaurant">
-                        <span class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></span>
-                    </div>
-                </div>
+      </div>
+      <div>
+        <div class="d-flex justify-content-around gap-3 me-5">
+          <div>
+            <select class="form-select selectc-input" aria-label="Default select example" (change)="onMenuChange()"
+              [(ngModel)]="selectedMenuId">
+              <option value="" disabled selected>Choisissez un type de menu</option>
+              <option *ngFor="let menu of menus" [value]="menu.id">{{ menu.titre }}</option>
+            </select>
+          </div>
+          <div class="search">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control inputsearchResto" placeholder="rechercher un restaurant">
+              <span class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></span>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
-<div>
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 m-5">
-    <div *ngFor="let plat of plats" class="col">
-      <div class="card rounded rounded-4 cardResto">
-        <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center"  >
-          <img src="http://127.0.0.1:8000/images/{{plat.image}}"  width="100px"  class="card-img-top border border-2 imagePLat" alt="plat image">
-        </div>
-        <div class="card-body cardBodyResto">
-          <div class="card-title d-flex justify-content-between">
-            <h5>{{ plat.libelle }}</h5>
-            <p class="">{{ plat.prix }} fcfa</p>
+    <div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 m-5">
+        <div *ngFor="let plat of plats" class="col">
+          <div class="card rounded rounded-4 cardResto">
+            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
+              <img src="http://127.0.0.1:8000/images/{{plat.image}}" width="100px"
+                class="card-img-top border border-2 imagePLat" alt="plat image">
+            </div>
+            <div class="card-body cardBodyResto">
+              <div class="card-title d-flex justify-content-between">
+                <h5>{{ plat.libelle }}</h5>
+                <p class="">{{ plat.prix }} fcfa</p>
+              </div>
+              <p class="card-text">{{ plat.descriptif }}</p>
+            </div>
+            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
+              <button class="boutonCommandeDts rounded rounded-5 px-3" (click)="ajouterAuPanier(plat)">Ajouter <i
+                  class="bi bi-basket"></i></button>
+            </div>
           </div>
-          <p class="card-text">{{ plat.descriptif }}</p>
-        </div>
-        <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end"> 
-          <button class="boutonCommandeDts rounded rounded-5 px-3" (click)="ajouterAuPanier(plat)">Ajouter <i class="bi bi-basket"></i></button>
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
 
-<!-- section de resto avec ces cartes -->
-<!-- pagination  -->
-<div class="pagin d-flex justify-content-center">
+  <!-- commentaite et recaptulatif du panier  -->
+  <div>
+    <!-- carte recaptulatif du panier  -->
+    <div>
+      
+    </div>
+    <!-- carte de commentaire  -->
+    <div>
+    </div>
+  </div>
+
+
+  <!-- section de resto avec ces cartes -->
+  <!-- pagination  -->
+  <div class="pagin d-flex justify-content-center">
     <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item active"><a class="page-link active">1</a></li>
-            <li class="page-item"><a class="page-link pagi">2</a></li>
-            <li class="page-item"><a class="page-link pagi">3</a></li>
-            <li class="page-item">
-                <a class="page-link" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item active"><a class="page-link active">1</a></li>
+        <li class="page-item"><a class="page-link pagi">2</a></li>
+        <li class="page-item"><a class="page-link pagi">3</a></li>
+        <li class="page-item">
+          <a class="page-link" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
     </nav>
-</div>
+  </div>
 
 </section>
 <!-- section de resto avec ces cartes -->
@@ -149,4 +168,3 @@
       </ul>
   </nav>
 </div> -->
-
